--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -25,8 +25,7 @@
 #          this value cannot be greater than the number of species assigned 
 #          to the resource group in the species.in file
 # slow = slow growth rate, defines when to count stretched years
-# stretch  = max yrs resources can be stretched before low-resource
-#                    mortality occurs.
+# stretch  = max yrs resources can be stretched before low-resource mortality occurs.
 # xres   = 1 = use other groups' extra resources, 0 = can't use
 # estann = establish annually if 1; if 0, establishment
 #          for this group is random from year to year.
@@ -36,28 +35,26 @@
 #        especially useful for invasives.
 # killyr = kill all members of this group at end of this year.
 #          0 == don't kill
-#killfreq_startyr = kill fequency start year from there kill frequency will be valid
+# killfreq_startyr = start year for killing due to fire, which will continue at the specified kill frequency
 # killfrq = frequency to kill.  if < 1, yearly probability,
-#            if > 1 yearly interval, after start year (start).  
+#            if > 1 yearly interval, after killfreq_startyr.  
 #            Overrides killyr.
-#            See also disturbances in environmental parameter file.
 # extirp = year at which all group members are extirpated
 #       (without recovery) from the plot. 0==don't use, >0 == year # 
 # mort =  switch to allow age-independent/slowgrowth mortality
-#         functions. eg, bouteloua and succulents are excluded,
-#         but others might be excluded for testing purposes.
-#         0 = don't use; 1 = use.
+#         functions.0 = don't use; 1 = use.
 # xgrow = extra growth factor; if > 0, plants can convert "extra" ppt
 #         into ephemeral (this year's) biomass by
 #         grams_extra_biomass = mm_extra_ppt * xgrow_factor
-# veg_prod_type = 1 for tree, 2 for shrub, 3 for grass & 4 for forb.  Refer to soilwat's VegProd types in VegProd.h.
-# proportion_killed = proportionally killed all members of the group at given kill year.
+# veg_prod_type = 1 for tree, 2 for shrub, 3 for grass & 4 for forb.  Refer to Soilwat2’s VegProd types in VegProd.h.
+# proportion_killed = proportional killing that mimics fire at given kill year/killfreq. This is the proportion of biomass 
+# 	   removed by fire.
 # proportion_recovered = proportionally recovered all members of the group after kill year.
-# grazing_frq = frequency to grazing.  if < 1, yearly probability,
-#            if > 1 yearly interval, after start year (start).  
+# grazing_frq = frequency of grazing.  if < 1, yearly probability,
+#            if > 1 yearly interval, after grazingfreq_startyr.  
 #            Overrides grazingyear.
-# proportion_grazing = proportionally grazing on grazingyear based on  grazing_frq.
-# grazingfreq_startyr = grazing fequency start year from there grazing frequency will be valid
+# proportion_grazing = proportion of biomass removed due to grazing. 
+# grazingfreq_startyr = start year for grazing
 
 #TM - density values from Biondini et al 1998 - used density% in Table 2 for p.cool.forb (Achillea millefolium) and
 #	p.warm.forb (Grindelia squarrosa)
@@ -80,7 +77,7 @@
  p.cool.grass  0.220  15.000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   3  1.00  0.70 0  0.24  0
  p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   3  1.00  0.70 0  0.24  0
  shrub         0.090  1.0000   1  0.0500   2     1       0   1      1        0      0       0       0     1  0.00000   2  1.00  0.00 0  0.00  0
- succulents	   0.030  0.3100   1  0.0500   8     1       0   1		1		 0		0		0	    0     0  0.00000   2  1.00  0.00 0  0.00  0 
+ succulents	0.030  0.3100   1  0.0500   8     1       0   1   	1        0      0       0       0     0  0.00000   2  1.00  0.00 0  0.00  0 
 # a.warm.grass 0.000  5.0000   1  0.0500   2     1       0   0      1        0      0       0       0     1  0.00000   3  0.20  0.80 0  0.20  0
 
 [end]  # section end
@@ -97,7 +94,7 @@
 #TM - these are the values from Bradford and Lauenroth 2006
 
 # name            nslope   nint     wetslope wetint   dryslope dryint  
-sagebrush 	      0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
+sagebrush 	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 a.cool.forb 	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 a.warm.forb 	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 p.cool.forb 	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
@@ -105,8 +102,8 @@ p.warm.forb 	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 a.cool.grass	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 p.cool.grass	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 p.warm.grass	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
-shrub    	      0.00093  0.70935  0.00093  0.70935  0.00400  0.70935
-succulents        0.00093  0.70935  0.00093  0.70935  0.00400  0.70935
+shrub    	  0.00093  0.70935  0.00093  0.70935  0.00400  0.70935
+succulents       0.00093  0.70935  0.00093  0.70935  0.00400  0.70935
 #a.warm.grass	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 
 [end]  # section end
