--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/files_v30.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/files_v30.in
@@ -24,9 +24,14 @@ Input/estab.in	# plant establishment start file
 Input/swcsetup.in	# params for handling measured swc
 
 #Output
-Output	# 'relative' path for output files: / for same directory, or e.g., Output/
+Output/	# 'relative' path for output files: / for same directory, or e.g., Output/
 Input/outsetup_v30.in	# define output quantities
 Output/csv/daily.csv	#output
 Output/csv/weekly.csv	#output
 Output/csv/monthly.csv	#output
 Output/csv/yearly.csv	#output
+
+Output/csv/daily_soil.csv	#output
+Output/csv/weekly_soil.csv	#output
+Output/csv/monthly_soil.csv	#output
+Output/csv/yearly_soil.csv	#output
