Adding # All-group parameters: back to rgroup.in
As requested the top of the rgoup file now contains 
# All-group parameters:

--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -6,6 +6,7 @@
 # however, the order of input is important
 
 ####################################################
+# All-group parameters:
 # NOTE: only 10 RGs can be established at a time. Below there are 11 RG possibilities. One always has
 # to be turned off. As a default, annual warm-season grasses are turned off.
 #=============================================================
