--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/veg.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/veg.in
@@ -3,17 +3,12 @@
 
 # ---- Composition of vegetation type components (0-1; must add up to 1)
 # Grasses	Shrubs	Trees	Forbs	BareGround
-	0.2			0.6			0.0			0.2			0.0
+	0.2	0.2	0.2	0.2	0.2
 
 
 # ---- Albedo
 # Grasses	Shrubs	Trees	Forbs	BareGround
 	0.167	0.143	0.106	0.167	0.15 # albedo: (Houldcroft et al. 2009) MODIS snowfree 'grassland', 'open shrub', ‘evergreen needle forest’ with MODIS albedo aggregated over pure IGBP cells where NDVI is greater than the 98th percentile NDVI
-
-
-# ---- % Cover: divide standing LAI by this to get % cover
-# Grasses	Shrubs	Trees	Forbs
-	3.0	2.22	5.0	3.0
 
 
 # -- Canopy height (cm) parameters either constant through season or as tanfunc with respect to biomass (g/m^2)
@@ -25,20 +20,15 @@
 	0.0	50.	1200.	0.0	# if > 0 then constant canopy height (cm)
 
 
-# --- Vegetation interception parameters for equation: intercepted rain = (a + b*veg) + (c+d*veg) * ppt; Grasses+Shrubs: veg=vegcov, Trees: veg=LAI
+# --- Vegetation interception parameters: kSmax * log10(1 + LAI_live + kdead * LAI_dead)
 # Grasses	Shrubs	Trees	Forbs
-	0.0182	0.			0.00461	0.0182	# a
-	0.0065	0.0026	0.01405	0.0065	# b
-	0.0019	0.			0.0383	0.0019	# c
-	0.0054	0.0033	0.0337	0.0054	# d
+	1.0			2.6			2.0		1.0	# kSmax (mm)
+	1.0			0.1			0.01	0.5	# kdead (0-1 fraction)
 
 
-# --- Litter interception parameters for equation: intercepted rain = (a + b*litter) + (c+d*litter) * ppt
+# --- Litter interception parameters: kSmax * log10(1 + litter_density)
 # Grasses	Shrubs	Trees	Forbs
-	0.0151	0.0151	0.0151	0.0151	# a
-	0.00005	0.00005	0.00005	0.00005	# b
-	0.0116	0.0116	0.0116	0.0116	# c
-	0.00002	0.00002	0.00002	0.00002	# d
+	0.113		0.113		0.290	0.113	# kSmax (mm)
 
 
 # ---- Parameter for partitioning of bare-soil evaporation and transpiration as in Es = exp(-param*LAI)
@@ -92,61 +82,61 @@
 # LAI_conv - monthly amount of biomass needed to produce LAI=1.0 (g/m^2).
 # There should be 12 rows, one for each month, starting with January.
 #
-#Litter	Biomass	%Live	LAI_conv
-75.0	150.0	0.0	90.0	# January
-80.0	150.0	0.0	90.0	# February
-85.0	150.0	0.1	90.0	# March
-90.0	170.0	0.2	90.0	# April
-50.0	190.0	0.4	90.0	# May
-50.0	220.0	0.6	90.0	# June
-50.0	250.0	0.4	90.0	# July
-55.0	220.0	0.6	90.0	# August
-60.0	190.0	0.4	90.0	# September
-65.0	180.0	0.2	90.0	# October
-70.0	170.0	0.1	90.0	# November
-75.0	160.0	0.0	90.0	# December
+#Litter  Biomass  %Live LAI_conv
+ 75.0    150.0    0.00  300.     # January
+ 80.0    150.0    0.00  300.     # February
+ 85.0    150.0    0.10  300.     # March
+ 90.0    170.0    0.20  300.     # April
+ 50.0    190.0    0.40  300.     # May
+ 50.0    220.0    0.60  300.     # June
+ 50.0    250.0    0.40  300.     # July
+ 55.0    220.0    0.60  300.     # August
+ 60.0    190.0    0.40  300.     # September
+ 65.0    180.0    0.20  300.     # October
+ 70.0    170.0    0.10  300.     # November
+ 75.0    160.0    0.00  300.     # December
 
 # Shrublands component:
-#Litter	Biomass	%Live	LAI_conv
-85.4	210.0	0.06	116.0	# January
-88.2	212.0	0.08	116.0	# February
-95.3	228.0	0.2		116.0	# March
-100.5	272.0	0.33	116.0	# April
-166.4	400.0	0.57	116.0	# May
-186.0	404.0	0.55	116.0	# June
-177.1	381.0	0.5		116.0	# July
-212.2	352.0	0.46	116.0	# August
-157.4	286.0	0.32	116.0	# September
-124.9	235.0	0.15	116.0	# October
-110.4	218.0	0.08	116.0	# November
-104.3	214.0	0.06	116.0	# December
+#Litter  Biomass  %Live LAI_conv
+85.4   210.0     0.06     372      # January
+88.2   212.0     0.08     372      # February
+95.3   228.0     0.20     372      # March
+100.5   272.0     0.33     372      # April
+166.4   400.0     0.57     372      # May
+186.0   404.0     0.55     372      # June
+177.1   381.0     0.50     372      # July
+212.2   352.0     0.46     372      # August
+157.4   286.0     0.32     372      # September
+124.9   235.0     0.15     372      # October
+110.4   218.0     0.08     372      # November
+104.3   214.0     0.06     372      # December
 
 # Forest component:
-#Litter	Biomass	%Live	LAI_conv
-2000.0	15000.0	0.083	500.0	# January
-2000.0	15000.0	0.083	500.0	# February
-2000.0	15000.0	0.083	500.0	# March
-2000.0	15000.0	0.083	500.0	# April
-2000.0	15000.0	0.083	500.0	# May
-2000.0	15000.0	0.083	500.0	# June
-2000.0	15000.0	0.083	500.0	# July
-2000.0	15000.0	0.083	500.0	# August
-2000.0	15000.0	0.083	500.0	# September
-2000.0	15000.0	0.083	500.0	# October
-2000.0	15000.0	0.083	500.0	# November
-2000.0	15000.0	0.083	500.0	# December
+#Litter  Biomass  %Live  LAI_conv
+2000 15000     0.083  500      # January
+2000 15000     0.083  500      # February
+2000 15000     0.083  500      # March
+2000 15000     0.083  500      # April
+2000 15000     0.083  500     # May
+2000 15000     0.083  500      # June
+2000 15000     0.083  500      # July
+2000 15000     0.083  500      # August
+2000 15000     0.083  500      # September
+2000 15000     0.083  500      # October
+2000 15000     0.083  500      # November
+2000 15000     0.083  500      # December
 
-# FORB component:
-#Litter	Biomass	%Live	LAI_conv
-85.4	210.0	0.06	116.0	# January
-88.2	212.0	0.08	116.0	# February
-95.3	228.0	0.2		116.0	# March
-100.5	272.0	0.33	116.0	# April
-166.4	400.0	0.57	116.0	# May
-186.0	404.0	0.55	116.0	# June
-177.1	381.0	0.5		116.0	# July
-212.2	352.0	0.46	116.0	# August
-157.4	286.0	0.32	116.0	# September
-124.9	235.0	0.15	116.0	# October
-110.4	218.0	0.08	116.0	# November
-104.3	214.0	0.06	116.0	# December
+# Forb component:
+#Litter  Biomass  %Live LAI_conv
+ 75.0    150.0    0.00  300.     # January
+ 80.0    150.0    0.00  300.     # February
+ 85.0    150.0    0.10  300.     # March
+ 90.0    170.0    0.20  300.     # April
+ 50.0    190.0    0.40  300.     # May
+ 50.0    220.0    0.60  300.     # June
+ 50.0    250.0    0.40  300.     # July
+ 55.0    220.0    0.60  300.     # August
+ 60.0    190.0    0.40  300.     # September
+ 65.0    180.0    0.20  300.     # October
+ 70.0    170.0    0.10  300.     # November
+ 75.0    160.0    0.00  300.     # December
