--- a/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/rgroup.in
@@ -30,7 +30,13 @@
 # xgrow = extra growth factor; if > 0, plants can convert "extra" ppt
 #         into ephemeral (this year's) biomass by
 #         grams_extra_biomass = mm_extra_ppt * xgrow_factor
-# veg_prod_type = 1 for tree, 2 for shrub, 3 for grass & 4 for forb.  Refer to Soilwat2’s VegProd types in VegProd.h.
+# veg_prod_type = translate to SOILWAT2 vegetation types, i.e.,
+#                 1 for needle-leaved tree,
+#                 2 for shrub,
+#                 3 for C3-grass,
+#                 4 for forb,
+#                 5 for C4-grass,
+#                 6 for broad-leaved tree
 # killyr = kill all members of this group at end of this year.
 #          0 == don't kill
 # killfreq_startyr = start year for killing due to fire, which will continue at the specified kill frequency
@@ -74,7 +80,7 @@
  p.warm.forb   0.040  3.0000   1  0.0500   2     1       0   1      1     0.20000   4  0      0       0    0     1    1.00  0.50 0  0.24  0  900 112.5	1.0
  a.cool.grass  0.050  50.000   1  0.0500   2     1       0   1      1     0.30000   3  0      0       0    0     1    1.00  0.00 0  0.24  0  900 150	1.0
  p.cool.grass  0.220  15.000   1  0.0500   2     1       0   1      1     0.30000   3  0      0       0    0     1    1.00  0.80 0  0.24  0  900 100	1.0
- p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1     0.30000   3  0      0       0    0     1    1.00  0.80 0  0.24  0  900 100	1.0
+ p.warm.grass  0.040   5.000   1  0.0500   2     1       0   1      1     0.30000   5  0      0       0    0     1    1.00  0.80 0  0.24  0  900 100	1.0
  shrub         0.090  1.0000   1  0.0500   2     1       0   1      1     0.20000   2  0      0       0    0     1    1.00  0.50 0  0.00  0  900 90		1.0
  succulents    0.030  0.3100   1  0.0500   8     1       0   1      1     0.10000   2  0      0       0    0     1    1.00  0.00 0  0.00  0  900 19.57	1.0
 
