--- a/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/soils.in
+++ b/testing.sagebrush.master/Stepwat_Inputs/Input/sxw/Input/soils.in
@@ -5,7 +5,7 @@
 # matricd = (g/cm^3) bulk density of soil in this layer.
 # gravel_content = the percent volume of each layer composed of gravel (i.e., particles > 2mm)
 # evco = (frac) proportion of total baresoil evap from this layer.
-# trco = (frac) proportion of total transpiration from this layer for each vegetation type (tree, forb, shrub, grass)
+# trco = (frac) proportion of total transpiration from this layer for each vegetation type
 # %sand = (frac) proportion of sand in layer (0-1.0).
 # %clay = (frac) proportion of clay in layer (0-1.0).
 # imperm = (frac) proportion of 'impermeability' to water percolation(/infiltration/drainage) in layer (0-1.0)
@@ -16,12 +16,12 @@
 # Soil texture data for 3 top layers from Trace's MT data. Rest of soil texture from STATSGO.
 # Note: matricd, evco, soil temp for all soil layers from Bradford & Lauenroth 2006 Appendix.
 
-# depth    matricd    gravel_content    evco    	trco_grass    		trco_shrub    trco_tree    		trco_forb    %sand    %clay    imperm    soiltemp    %om
- 10.000      1.430      0.000          0.500        0.306575568         0.211234509        0.100        0.306575568    0.450    0.18     0.000       0.186       0.0
- 20.000      1.410      0.000          0.350        0.213538459         0.168060003        0.250        0.213538459    0.480    0.19     0.000       0.372       0.0
- 30.000      1.390      0.000          0.150        0.148735509         0.133709996        0.300        0.148735509    0.530    0.16     0.000       0.744       0.0
- 40.000      1.390      0.000          0.000        0.103598443         0.106380832        0.200        0.103598443    0.530    0.16     0.000       1.116       0.0
- 60.000      1.380      0.000          0.000        0.122420124         0.151975847        0.100        0.122420124    0.530    0.16     0.000       1.488       0.0
- 80.000      1.150      0.000          0.000        0.059392272         0.096199668        0.050        0.059392272    0.530    0.16     0.000       2.232       0.0
- 100.00      1.310      0.000          0.000        0.028814231         0.060893731        0.000        0.028814231    0.530    0.16     0.000       2.975       0.0
- 150.00      1.310      0.000          0.000        0.016925393         0.071545414        0.000        0.016925393    0.530    0.16     0.000       2.975       0.0
+ # depth   density    %gravel    %sand    %clay    %om    imperm    soiltemp    evco   trco_treeNL   trco_treeBL    trco_shrub    trco_forbs   trco_grassC3   trco_grassC4
+ 10.000      1.430      0.000    0.450     0.18    0.0     0.000       0.186   0.500         0.100         0.100   0.211234509   0.306575568    0.306575568    0.306575568
+ 20.000      1.410      0.000    0.480     0.19    0.0     0.000       0.372   0.350         0.250         0.250   0.168060003   0.213538459    0.213538459    0.213538459
+ 30.000      1.390      0.000    0.530     0.16    0.0     0.000       0.744   0.150         0.300         0.300   0.133709996   0.148735509    0.148735509    0.148735509
+ 40.000      1.390      0.000    0.530     0.16    0.0     0.000       1.116   0.000         0.200         0.200   0.106380832   0.103598443    0.103598443    0.103598443
+ 60.000      1.380      0.000    0.530     0.16    0.0     0.000       1.488   0.000         0.100         0.100   0.151975847   0.122420124    0.122420124    0.122420124
+ 80.000      1.150      0.000    0.530     0.16    0.0     0.000       2.232   0.000         0.050         0.050   0.096199668   0.059392272    0.059392272    0.059392272
+ 100.00      1.310      0.000    0.530     0.16    0.0     0.000       2.975   0.000         0.000         0.000   0.060893731   0.028814231    0.028814231    0.028814231
+ 150.00      1.310      0.000    0.530     0.16    0.0     0.000       2.975   0.000         0.000         0.000   0.071545414   0.016925393    0.016925393    0.016925393
